# chatr-client

./: Cargo.toml
src/: client_attributes.rs  connection.rs  main.rs
